Aborting a two phase index build does not block step down

XMLWordPrintableJSON

    • Replication
    • Fully Compatible
    • Storage Execution 2025-08-04, Repl 2025-09-01, Repl 2025-09-15
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the intent registration feature flag is enabled, we do not take the RSTL lock when attempting to abort a two phase index build. This means that it's possible for the node issuing the abort index build command to be a writable primary here, but then have been forced to step down by the time we check this invariant.

      Since the index build coordinator thread marks itself unkillable here, the step down also cannot interrupt the command.

      One way to get around this could be to use BlockingWrite intent when trying to abort a two phase index build

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Damian Wasilewicz
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: