SERVER-108462 Take intents such that aborting a two phase index build blocks step down (#40961)

GitOrigin-RevId: d47c2724ebfc0ac8e5aaeac90856fe12eac3fca5